# bills_bot

./: Dockerfile  compose.yml  handlers.py  main.py  pyproject.toml  services.py  settings.py
unauthorized/: sber_statement_04-01-2025_12-28-03.pdf.txt
